# University

./: .gitignore  README.md  main.py
HighResolutionTimer/: timer.cpp  timer.h
Programming/Sem_3/Lab_12/: AddToFile.c  AddToFile.h  CMakeLists.txt  Colors.h  Helpers.c  Helpers.h  ModifyTableContent.c  ModifyTableContent.h  PrintTable.c  PrintTable.h  README.md  RemoveFromFile.c  RemoveFromFile.h  TaskFunctions.c  TaskFunctions.h  main.c
Sem_04/OOP/Lab_01/: CMakeLists.txt  main.cpp
Sem_04/OOP/Lab_01/Examples/: cube.txt  pyramid.txt
Sem_04/OOP/Lab_01/headers/: action.h  dot.h  error.h  geometry.h  lineto.h  link.h  load_file.h  mainwindow.h  print_picture.h  processor.h  ptr.h  qstrtochararr.h  stream.h  ui_mainwindow.h
Sem_04/OOP/Lab_01/sources/: action.cpp  dot.cpp  error.cpp  geometry.cpp  lineto.cpp  link.cpp  load_file.cpp  mainwindow.cpp  print_picture.cpp  processor.cpp  ptr.cpp  qstrtochararr.cpp  stream.cpp
Sem_04/OOP/Lab_02/: CMakeLists.txt  base_allocator.hpp  base_container.hpp  base_iterator.hpp  base_vector_iterator.hpp  const_vector_iterator.hpp  ftlspace.hpp  main.cpp  object_traits.hpp  standard_alloc_policy.hpp  vector.hpp  vector_iterator.hpp
Sem_04/OOP/Lab_02/definition/: array_iterator.hpp  base_allocator.hpp  base_array_iterator.hpp  base_container.hpp  base_iterator.hpp  const_array_iterator.hpp  expanding_container.hpp  object_traits.hpp  set.hpp  standard_alloc_policy.hpp  vector.hpp
Sem_04/OOP/Lab_02/definitions/: array_iterator.hpp  base_allocator.hpp  base_array_iterator.hpp  base_container.hpp  base_iterator.hpp  const_array_iterator.hpp  const_set_iterator.hpp  exceptions.hpp  expanding_container.hpp  ftlspace.hpp  object_traits.hpp  set.hpp  set_iterator.hpp  standard_alloc_policy.hpp  vector.hpp
Sem_04/OOP/Lab_02/implementation/: set_impl.hpp  standard_alloc_policy_impl.hpp
Sem_04/OOP/Lab_02/implementations/: array_iterator_impl.hpp  base_allocator_impl.hpp  base_array_iterator_impl.hpp  base_container.cpp  base_container_impl.hpp  base_iterator_impl.hpp  const_array_iterator_impl.hpp  const_set_iterator_impl.hpp  expanding_container_impl.hpp  object_traits_impl.hpp  set_impl.hpp  set_iterator_impl.hpp  vector_impl.hpp
Sem_04/OOP/Lab_02/tests/: set_tests.hpp  timer.hpp  vector_tests.hpp
Sem_06/PPO/Lab_01/: CMakeLists.txt  main.cpp  main.qml  resources.qrc
Sem_06/PPO/Lab_01/3dparty/: CMakeLists.txt
Sem_06/PPO/Lab_01/3dparty/polyline/: CMakeLists.txt  polylineencoder.cpp  polylineencoder.h
Sem_06/PPO/Lab_01/gui/: CMakeLists.txt  commands.cpp  commands.h  mainwindow.cpp  mainwindow.h  widget.cpp  widget.h
Sem_06/PPO/Lab_01/gui/forms/: mainwindow.ui  widget.ui
Sem_06/PPO/Lab_01/gui/include/: commands.h  task.h
Sem_06/PPO/Lab_01/gui/include/commands/: commands.h
Sem_06/PPO/Lab_01/gui/resources/qml/: MapView.qml
Sem_06/PPO/Lab_01/gui/src/: commands.cpp
Sem_06/PPO/Lab_01/gui/src/commands/: commands.cpp
Sem_06/PPO/Lab_01/include/: facade.h  guifactory.h  libaccessfacade.h
Sem_06/PPO/Lab_01/include/commands/: commands.h
Sem_06/PPO/Lab_01/include/common/: exceptions.h  route.h  routestore.h
Sem_06/PPO/Lab_01/include/dataloaders/: abstractdataloader.h  dataloader.h  dataloaders.h  gpxdataloader.h  loaderfactory.h  xmldataloader.h
Sem_06/PPO/Lab_01/include/exceptions/: abstractexception.h  fileexception.h
Sem_06/PPO/Lab_01/lib/: CMakeLists.txt
Sem_06/PPO/Lab_01/lib/3dparty/: CMakeLists.txt
Sem_06/PPO/Lab_01/lib/3dparty/polyline/: CMakeLists.txt  polylineencoder.cpp  polylineencoder.h
Sem_06/PPO/Lab_01/lib/include/: libaccessfacade.h
Sem_06/PPO/Lab_01/lib/include/commands/: commands.h
Sem_06/PPO/Lab_01/lib/include/common/: exceptions.h  objectpool.h  route.h  routestore.h
Sem_06/PPO/Lab_01/lib/include/dataloaders/: dataloaders.h  loaderfactory.h
Sem_06/PPO/Lab_01/lib/src/: libaccessfacade.cpp
Sem_06/PPO/Lab_01/lib/src/commands/: commands.cpp
Sem_06/PPO/Lab_01/lib/src/common/: route.cpp  routestore.cpp
Sem_06/PPO/Lab_01/lib/src/dataloaders/: dataloaders.cpp  loaderfactory.cpp
Sem_06/PPO/Lab_01/src/: CMakeLists.txt  guifactory.cpp  libaccessfacade.cpp
Sem_06/PPO/Lab_01/src/commands/: commands.cpp
Sem_06/PPO/Lab_01/src/common/: route.cpp  routestore.cpp
Sem_06/PPO/Lab_01/src/dataloaders/: dataloaders.cpp  gpxdataloader.cpp  xmldataloader.cpp
Sem_06/PPO/Lab_01/tests/: CMakeLists.txt  polylinedecodetest.cpp  polylinedecodetest.h  polylineencodetest.cpp  polylineencodetest.h  routedeletetest.cpp  routedeletetest.h
Sem_06/PPO/Lab_02/: CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  main.cpp
Sem_06/PPO/Lab_02/application/: CMakeLists.txt
Sem_06/PPO/Lab_02/application/include/data/models/: Route.h
Sem_06/PPO/Lab_02/application/include/ui/: MainWindow.h  MainWindow.ui
Sem_06/PPO/Lab_02/application/include/ui/commands/: RemoveCoordinateCommand.h
Sem_06/PPO/Lab_02/application/include/ui/presenters/: IPresenter.h  SpinBoxDelegate.h
Sem_06/PPO/Lab_02/application/src/data/: Polyline.cpp
Sem_06/PPO/Lab_02/application/src/ui/: AddCoordinateDialog.cpp  MainWindow.cpp
Sem_06/PPO/Lab_02/include/data/: DataRW.h  Polyline.h  RuntimeStorage.h
Sem_06/PPO/Lab_02/include/data/models/: Coordinate.h  Route.h
Sem_06/PPO/Lab_02/include/ui/: MainWindow.h  MainWindow.ui
Sem_06/PPO/Lab_02/include/ui/presenters/: ChartPresenter.h  RoutesPresenter.h
Sem_06/PPO/Lab_02/src/data/: DataRW.cpp  Polyline.cpp  RuntimeStorage.cpp
Sem_06/PPO/Lab_02/src/data/models/: Coordinate.cpp  Route.cpp
Sem_06/PPO/Lab_02/src/ui/: MainWindow.cpp
Sem_06/PPO/Lab_02/src/ui/commands/: AddCoordinateCommand.cpp  RemoveCoordinateCommand.cpp
Sem_06/PPO/Lab_02/src/ui/presenters/: ChartPresenter.cpp  CoordinatesPresenter.cpp  IPresenter.cpp  RoutesPresenter.cpp
Sem_06/PPO/Lab_02/tests/: CMakeLists.txt  PolylineTest.cpp  PolylineTest.h  RouteTest.cpp  RouteTest.h
Sem_06/PPO/Lab_03/application/plugins/descentsAndAscents/: CMakeLists.txt  DescentsAndAscentsPlugin.cpp  DescentsAndAscentsPlugin.h
Sem_06/PPO/Lab_03/application/plugins/turns/: CMakeLists.txt  TurnsPlugin.cpp  TurnsPlugin.h
(+457 files in other folders)
